...
                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="LOi-CO-A4w">
                                        <rect key="frame" x="0.0" y="0.0" width="241" height="153"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="JSN-KN-dCw">
                                                <rect key="frame" x="0.0" y="0.0" width="241" height="21"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUo-o9-fSe">
                                                        <rect key="frame" x="0.0" y="0.0" width="115" height="21"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                        <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                                            <rect key="frame" x="0.0" y="0.0" width="166" height="21"/>
...
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="HY4-La-mxn">
                                        <rect key="frame" x="0.0" y="173" width="241" height="158"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="huI-Qs-MsB">
                                                <rect key="frame" x="69" y="0.0" width="103" height="30"/>
                                                <state key="normal" title="ManageTokens"/>
                                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                                    <rect key="frame" x="121" y="0.0" width="103" height="30"/>
                                                </variation>
                                                <connections>
                                                    <segue destination="Rhs-aX-PL9" kind="presentation" identifier="ManageTokens" id="7BB-Pe-WuV"/>
                                                </connections>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Users" id="Zdf-7t-Un8"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="709" y="-630"/>
        </scene>
        <!--Navigation Controller-->
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDT-Fx-9Qb">
                                <rect key="frame" x="251" y="280" width="99" height="30"/>
                                <state key="normal" title="AddNewToken"/>
                                <connections>
                                    <action selector="AddNewToken:" destination="Rhs-aX-PL9" eventType="touchUpInside" id="mTL-Os-lWa"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
