...
}



var arr = NSMutableArray()

let user = TokensUser(userName: "john@john.com", password: "asdfasdf123")

arr.addObject(user)

userNameIsUniqueIn(arr, username: "john@john.co")


...
