...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L9R-RS-P9t">
                                                        <rect key="frame" x="0.0" y="0.0" width="143" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password1" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ou-Qe-KbF" customClass="PasswordTextField" customModule="UserTokens" cu
                                                        <rect key="frame" x="151" y="0.0" width="143" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <outlet property="delegate" destination="fTy-g5-7EH" id="cn0-EY-ABK"/>
                                                        </connections>
...
